--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pothole-pulse-orange-view</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Ekistia</title>
+    <meta name="description" content="Agricultural data visualization and management platform for Iligan City" />
+    <meta name="author" content="Ekistia Team" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <meta property="og:title" content="pothole-pulse-orange-view" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Ekistia" />
+    <meta property="og:description" content="Agricultural data visualization and management platform for Iligan City" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Ekistia" />
+    <meta name="twitter:description" content="Agricultural data visualization and management platform for Iligan City" />
+    <meta name="twitter:image" content="/favicon.svg" />
   </head>
 
   <body>
