--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Ekistia</title>
     <meta name="description" content="Agricultural data visualization and management platform for Iligan City" />
     <meta name="author" content="Ekistia Team" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ekistia_favicon.svg" />
 
     <meta property="og:title" content="Ekistia" />
     <meta property="og:description" content="Agricultural data visualization and management platform for Iligan City" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="/ekistia_favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ekistia" />
     <meta name="twitter:description" content="Agricultural data visualization and management platform for Iligan City" />
-    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image" content="/ekistia_favicon.svg" />
   </head>
 
   <body>
